--- a/PascalBoard/MainPage.xaml
+++ b/PascalBoard/MainPage.xaml
@@ -4,7 +4,7 @@
              x:Class="PascalBoard.MainPage"
              BackgroundColor="Gray">
 
-    <Grid RowDefinitions="25*,0*,5*,10*,10*,10*,20*,0*,10*,15*,8*"
+    <Grid RowDefinitions="15*,0*,5*,0*,10*,10*,20*,0*,10*,15*,8*"
           ColumnDefinitions=".50*, .25*"
           BackgroundColor="Gray">
 
@@ -19,9 +19,12 @@
             <Label Text="PascalBoard" 
                    Grid.Column="0"
                    Grid.Row="0"
-                   BackgroundColor="Blue"
-                   FontSize="35" />
-            <Label Text="Minecraft villager sound" Grid.Row="1" BackgroundColor="Green" FontSize="20" Grid.ColumnSpan="1" />
+                   FontSize="30" 
+                   FontFamily = "monospace"/>
+            <Label Text="Minecraft villager sound" 
+                   Grid.Row="1" 
+                   FontSize="18" Grid.ColumnSpan="1" 
+                   FontFamily = "monospace"/>
 
             <Label Text="Darkmode" 
                    Grid.Column="1" 
@@ -35,26 +38,19 @@
         </Grid>
 
         <!-- Content Section -->
-
-        <Label Text="Bar:"
-               Grid.Row="4" 
-               BackgroundColor="Yellow" 
-               FontSize="20"
-               Grid.ColumnSpan="2" />
-
         <Label x:Name="DisplayCountLabel" 
                Text="Eventcounter:"
                Grid.Row="5" 
-               BackgroundColor="Pink"
                FontSize="20"
-               Grid.ColumnSpan="2" />
+               Grid.ColumnSpan="2" 
+               FontFamily = "monospace"/>
 
         <!-- Button Section -->
         <Grid Grid.Row="6" Grid.ColumnSpan="2" RowDefinitions="Auto, Auto" VerticalOptions="Center">
             <Label Text="Press the button"
                    HorizontalOptions="Center"
-                   BackgroundColor="Azure"
-                   FontSize="15" />
+                   FontSize="15"
+                   FontFamily = "monospace"/>
 
             <Button Clicked="ExecuteActionButton_Clicked"
                     x:Name="ExecuteActionButton"
@@ -63,37 +59,40 @@
                     HorizontalOptions="Center"
                     VerticalOptions="Center"
                     WidthRequest="120"
-                    HeightRequest="40" />
+                    HeightRequest="40"
+                    FontFamily = "monospace"/>
         </Grid>
 
         <!-- Footer Section -->
         <Grid Grid.Row="9" Grid.ColumnSpan="2" RowDefinitions="Auto, Auto" >
-            <Label Text="Use two fingers to navigate"
+            <Label Text="Use one fingers to navigate"
                    HorizontalOptions="Center"
                    VerticalOptions="Center"
-                   TextDecorations="Underline" />
+                   TextDecorations="Underline"
+                   FontFamily = "monospace"/>
 
             <Label Text="Swipe to the left"
                    Grid.Row="1"
                    HorizontalOptions="Center"
                    VerticalOptions="Center"
-                   TextDecorations="Underline" />
+                   TextDecorations="Underline"
+                   FontFamily = "monospace"/>
         </Grid>
 
         <!-- Navigation Bar -->
-        <Grid Grid.Row="10" Grid.ColumnSpan="2" BackgroundColor="DarkGray" RowDefinitions="Auto">
+        <Grid Grid.Row="10" Grid.ColumnSpan="2" BackgroundColor="DarkGray" Padding="10" RowDefinitions="Auto">
             <StackLayout Orientation="Horizontal" HorizontalOptions="CenterAndExpand" Spacing="30">
-                <Button Text="Home"
-                        BackgroundColor="Transparent"
-                        TextColor="White"/>
-                <Button Text="Settings"
-                        
-                        BackgroundColor="Transparent"
-                        TextColor="White"/>
+                <Button Text="Sound"
+                    BackgroundColor="Gray" 
+            TextColor="White"/>
+                <Button Text="Vibration"
+            
+            BackgroundColor="DarkGray"
+            TextColor="White"/>
 
-                <Button Text="Profile" 
-                        BackgroundColor="Transparent" 
-                        TextColor="White"/>
+                <Button Text="Light" 
+            BackgroundColor="Transparent" 
+            TextColor="White"/>
             </StackLayout>
         </Grid>
 
