--- a/PascalBoard/ShakeClass.xaml
+++ b/PascalBoard/ShakeClass.xaml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="PascalBoard.BarPage">
+             x:Class="PascalBoard.ShakeClass">
 
-    <Grid RowDefinitions="25*,0*,5*,10*,10*,10*,20*,0*,10*,15*,8*"
+    <Grid RowDefinitions="15*,0*,5*,0*,10*,10*,20*,0*,10*,15*,8*"
        ColumnDefinitions=".50*, .25*"
        ColumnSpacing="10"
        BackgroundColor="Gray">
@@ -17,14 +17,19 @@
             <Label Text="PascalBoard" 
                 Grid.Column="0"
                 Grid.Row="0"
-                BackgroundColor="Blue"
-                FontSize="35" />
-            <Label Text="Bar measure" Grid.Row="1" BackgroundColor="Green" FontSize="20" Grid.ColumnSpan="1" />
+                FontSize="30" 
+                FontFamily = "monospace"/>
+            <Label Text="Shake for Light" 
+                   Grid.Row="1" 
+                   FontSize="18" 
+                   Grid.ColumnSpan="1" 
+                   FontFamily = "monospace"/>
 
             <Label Text="Darkmode" 
                 Grid.Column="1" 
                 VerticalOptions="Center"
-                HorizontalOptions="End" />
+                HorizontalOptions="End"
+                FontFamily = "monospace"/>
 
             <Switch IsToggled="false"
                  Grid.Column="2" 
@@ -37,48 +42,65 @@
         <Label x:Name="DisplayCountLabel" 
             Text="Eventcounter:"
             Grid.Row="5" 
-            BackgroundColor="Pink"
             FontSize="20"
-            Grid.ColumnSpan="2" />
+            HeightRequest="50"
+            Grid.ColumnSpan="2"
+            FontFamily = "monospace"/>
 
         <!-- Bar display Section -->
         <Grid Grid.Row="6" Grid.ColumnSpan="2" RowDefinitions="Auto, Auto" VerticalOptions="Center">
             <Label x:Name="DisplayBarData" 
-                Text="Bar"
-                 Grid.Row="1"
+                Text="Give the smartphone a quick shake"
+                 Grid.Row="0"
                  HorizontalOptions="Center"
                  VerticalOptions="Center"
-                 WidthRequest="120"
-                 HeightRequest="40" />
+                 WidthRequest="350"
+                 HeightRequest="50"
+                  FontSize="15"
+                  FontFamily = "monospace"
+                  />
+            <Label x:Name="LightIndicator" 
+                     Text="Off"
+                      Grid.Row="1"
+                      HorizontalOptions="Center"
+                      VerticalOptions="Center"
+                      WidthRequest="50"
+                      HeightRequest="50"
+                      FontSize="20"
+                        TextColor="Red"
+                       FontFamily = "monospace"/>
+
         </Grid>
 
         <!-- Footer Section -->
         <Grid Grid.Row="9" Grid.ColumnSpan="2" RowDefinitions="Auto, Auto" >
-            <Label Text="Use two fingers to navigate"
+            <Label Text="Use one fingers to navigate"
                 HorizontalOptions="Center"
                 VerticalOptions="Center"
-                TextDecorations="Underline" />
+                TextDecorations="Underline"
+                FontFamily = "monospace"/>
 
-            <Label Text="Swipe to the left"
+            <Label Text="Swipe to the right"
                 Grid.Row="1"
                 HorizontalOptions="Center"
                 VerticalOptions="Center"
-                TextDecorations="Underline" />
+                TextDecorations="Underline"
+                FontFamily = "monospace"/>
         </Grid>
 
         <!-- Navigation Bar -->
         <Grid Grid.Row="10" Grid.ColumnSpan="2" BackgroundColor="DarkGray" Padding="10" RowDefinitions="Auto">
             <StackLayout Orientation="Horizontal" HorizontalOptions="CenterAndExpand" Spacing="30">
-                <Button Text="Home"
+                <Button Text="Sound"
                      BackgroundColor="Transparent"
                      TextColor="White"/>
-                <Button Text="Settings"
+                <Button Text="Vibration"
                      
                      BackgroundColor="Transparent"
                      TextColor="White"/>
 
-                <Button Text="Profile" 
-                     BackgroundColor="Transparent" 
+                <Button Text="Light" 
+                    BackgroundColor="Gray" 
                      TextColor="White"/>
             </StackLayout>
         </Grid>
