--- a/PascalBoard/ShakePage.xaml
+++ b/PascalBoard/ShakePage.xaml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="PascalBoard.ShakeClass">
+             x:Class="PascalBoard.ShakePage">
 
     <Grid RowDefinitions="15*,0*,5*,0*,10*,10*,20*,0*,10*,15*,8*"
        ColumnDefinitions=".50*, .25*"
@@ -9,7 +9,7 @@
        BackgroundColor="Gray">
 
         <Grid.GestureRecognizers>
-            <SwipeGestureRecognizer Direction="Right" Swiped="OnSwipedRight"/>
+            <SwipeGestureRecognizer Direction="Right" Swiped="GoToVibrationPage"/>
         </Grid.GestureRecognizers>
 
         <!-- Header Section -->
@@ -25,16 +25,7 @@
                    Grid.ColumnSpan="1" 
                    FontFamily = "monospace"/>
 
-            <Label Text="Darkmode" 
-                Grid.Column="1" 
-                VerticalOptions="Center"
-                HorizontalOptions="End"
-                FontFamily = "monospace"/>
 
-            <Switch IsToggled="false"
-                 Grid.Column="2" 
-                 VerticalOptions="Center"
-                 HorizontalOptions="Start" />
         </Grid>
 
         <!-- Content Section -->
@@ -92,10 +83,11 @@
         <Grid Grid.Row="10" Grid.ColumnSpan="2" BackgroundColor="DarkGray" Padding="10" RowDefinitions="Auto">
             <StackLayout Orientation="Horizontal" HorizontalOptions="CenterAndExpand" Spacing="30">
                 <Button Text="Sound"
+                        Clicked="GoToSoundPage"
                      BackgroundColor="Transparent"
                      TextColor="White"/>
                 <Button Text="Vibration"
-                     
+                     Clicked="GoToVibrationPage"
                      BackgroundColor="Transparent"
                      TextColor="White"/>
 
