--- a/PascalBoard/ShakePage.xaml
+++ b/PascalBoard/ShakePage.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="PascalBoard.ShakePage">
 
-    <Grid RowDefinitions="15*,0*,5*,0*,10*,10*,20*,0*,10*,15*,8*"
+    <Grid RowDefinitions="Auto,0*,5*,0*,10*,10*,20*,0*,10*,15*,Auto"
        ColumnDefinitions=".50*, .25*"
        ColumnSpacing="10"
        BackgroundColor="Gray">
@@ -29,7 +29,6 @@
         </Grid>
 
         <!-- Content Section -->
-
         <Label x:Name="DisplayCountLabel" 
             Text="Eventcounter:"
             Grid.Row="5" 
@@ -58,8 +57,9 @@
                       WidthRequest="50"
                       HeightRequest="50"
                       FontSize="20"
-                        TextColor="Red"
-                       FontFamily = "monospace"/>
+                      TextColor="Red"
+                      Margin="-20"
+                      FontFamily = "monospace"/>
 
         </Grid>
 
@@ -80,7 +80,7 @@
         </Grid>
 
         <!-- Navigation Bar -->
-        <Grid Grid.Row="10" Grid.ColumnSpan="2" BackgroundColor="DarkGray" Padding="10" RowDefinitions="Auto">
+        <Grid Grid.Row="10" Grid.ColumnSpan="2" BackgroundColor="DarkGray" Padding="0" Margin="10" RowDefinitions="Auto">
             <StackLayout Orientation="Horizontal" HorizontalOptions="CenterAndExpand" Spacing="30">
                 <Button Text="Sound"
                         Clicked="GoToSoundPage"
